Fixed visibility

--- a/public/main.css
+++ b/public/main.css
@@ -1,8 +1,8 @@
-p .hidden{
+.hidden{
 	display: none;
 }
 
-p .visible{
+.visible{
 	display: block;
 }
 
